yaml-rust-davvid: rename crate to yaml-rust-davvid for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "yaml-rust"
+name = "yaml-rust-davvid"
 version = "0.4.5" # remember to update html_root_url
-authors = ["Yuheng Chen <yuhengchen@sensetime.com>"]
+authors = [
+    "Yuheng Chen <yuhengchen@sensetime.com>",
+    "David Aguilar <davvid@gmail.com>"
+]
 homepage = "http://chyh1990.github.io/yaml-rust/"
 documentation = "https://docs.rs/yaml-rust"
 license = "MIT/Apache-2.0"
