--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ matrix:
     - rust: stable
     - rust: beta
     - rust: nightly
-    - rust: 1.33.0
+    - rust: 1.45.0
     - rust: nightly
-      env: CLIPPY
       script: |
-          if rustup component add clippy-preview; then
-              cargo clippy -- -Dclippy
+          if rustup component add clippy-preview
+          then
+              cargo clippy --all -- -D warnings
           fi
 
 script:
