--- a/garden.yaml
+++ b/garden.yaml
@@ -1,14 +1,17 @@
-# This is a garden file for use with Garden.
-# https://gitlab.com/garden-rs/garden
+# Use "cargo install garden-tools" to install garden https://gitlab.com/garden-rs/garden
 #
 # usage:
-#   garden <cmd> [-- [<args>...]]
-# examples:
+#   garden build
+#   garden test
 #   garden check
+#   garden fmt
+#   garden fix
 commands:
   bench: cargo bench "$@"
   build: cargo build "$@"
-  check: garden -vv cmd . check/clippy check/fmt
+  check>:
+    - check/clippy
+    - check/fmt
   check/clippy: cargo clippy --all "$@" -- -D warnings
   check/fmt: cargo fmt --check "$@"
   clean: cargo clean "$@"
