garden: add a remote for the "introduce or function" PR

--- a/garden.yaml
+++ b/garden.yaml
@@ -28,6 +28,7 @@ trees:
     url: "git@github.com:davvid/yaml-rust.git"
     remotes:
       byte1234: "git@github.com:byte1234/yaml-rust.git"
+      oldaccountdeadname: "git@github.com:oldaccountdeadname/yaml-rust.git"
       ramosbugs: "git@github.com:ramosbugs/yaml-rust.git"
       yaml-rust: "git@github.com:chyh1990/yaml-rust.git"
     gitconfig:
