--- a/garden.yaml
+++ b/garden.yaml
@@ -30,6 +30,7 @@ trees:
       byte1234: "git@github.com:byte1234/yaml-rust.git"
       jturner314: "git@github.com:jturner314/yaml-rust.git"
       mathstuf: "git@github.com:mathstuf/yaml-rust.git"
+      mkmik: "git@github.com:mkmik/yaml-rust.git"
       olalonde: "git@github.com:olalonde/yaml-rust.git"
       oldaccountdeadname: "git@github.com:oldaccountdeadname/yaml-rust.git"
       ramosbugs: "git@github.com:ramosbugs/yaml-rust.git"
@@ -59,3 +60,5 @@ trees:
         link: https://github.com/chyh1990/yaml-rust/pull/190
       - smoelius: Typo
         link: https://github.com/chyh1990/yaml-rust/pull/186
+      - mkmik: Implement load_from_bytes
+        link: https://github.com/chyh1990/yaml-rust/pull/156
