--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = [
     "David Aguilar <davvid@gmail.com>"
 ]
 homepage = "https://davvid.github.io/yaml-rust"
-documentation = "https://docs.rs/yaml-rust"
+documentation = "https://docs.rs/yaml-rust-davvid"
 license = "MIT/Apache-2.0"
 description = "The missing YAML 1.2 parser for rust"
 repository = "https://github.com/davvid/yaml-rust"
